--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "@seba69xxx/ajs",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://github.com/Seba69xxx/ajs#readme",
-  "bugs": {
-    "url": "https://github.com/Seba69xxx/ajs/issues"
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "webpack --mode production"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Seba69xxx/ajs.git"
   },
-  "license": "ISC",
   "author": "",
-  "type": "commonjs",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Seba69xxx/ajs/issues"
+  },
+  "homepage": "https://github.com/Seba69xxx/ajs#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.1",
+    "@babel/preset-env": "^7.24.1",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   }
 }
